[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fontfinder"
version = "0.10.0"

description = "Analyses the Unicode scripts used by strings, and locates fonts that can help display those strings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "semver>=3.0.2",
    "unicodedataplus>=15.1.0",
    "comtypes>=1.2.0;platform_system=='Windows'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
test = [
  "pytest",
]
docs = [
  "pdoc"
]
unihan = [
  "unihan-etl>=0.34", "typing_extensions"
]

[project.urls]
# "Documentation" = ""
"Source" = "https://github.com/multiscript/fontfinder"
"Issue Tracker" = "https://github.com/multiscript/fontfinder/issues"

[tool.setuptools.packages.find]
where = ["src"]  
include = ["fontfinder*"]  
exclude = ["tests*"] 
namespaces = false